tests/fixtures/invalid/max_int_dict.py
# Cannot call max() with Int, Dict[str, int]
x = max(1, {"a": 1})
